fix z-index

--- a/sass-compass-1/sass/screen.scss
+++ b/sass-compass-1/sass/screen.scss
@@ -77,4 +77,5 @@ body {
 
 .list > li:hover .children {
   display:block;
+  z-index:2;
 }
